# excel-anonymizer

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_data_faker.xlsx
examples/: config_faker.yaml  config_full.yaml  config_names.yaml
src/: anonymize.py  deanonymize.py  faker_replace.py  faker_utils.py  generate_sample.py
tests/: conftest.py  test_anonymize.py  test_faker_replace.py  test_faker_utils.py
